Correct spacing issue with phone number.

--- a/app/assets/stylesheets/desktop/_layout.css.sass
+++ b/app/assets/stylesheets/desktop/_layout.css.sass
@@ -122,7 +122,7 @@ header
       +reveal-hidden
       float: right
       line-height: 2.4
-      width: 115px
+      width: 125px
       margin-top: .065em
       text-align: right
       a
